# Projects

./: .gitmodules
C++/Dongle/: CMakeLists.txt  README.md  main.cpp  main.qml  main2.qml  qml.qrc
C++/Dongle/Drivers/: BeforeInstall.cmd  InstallDrivers.cmd  Keyr  Keys  Mkbus.cat  Mkbus.inf  Mkbus.sys  Optitex.cat  Optitex.inf  Optitex.sys  RemoveDrivers.cmd  RenameDrivers.cmd  Tap0901.cat  Tap0901.inf  Tap0901.sys
C++/Dongle/Optitex/: Languages.js
C++/Dongle/Optitex/Components/: ClassicRadioButton.qml  Descs.qml  LabelFor.qml  MainWindow.qml  NavigationButtons.qml  PushButton.qml  (+2 more)
C++/Sentinel/: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
C++/Sentinel/Assets/Sentinel/: 2ndStage.cmd  RenameDrivers.cmd  Run.cmd
C++/Sentinel/Optitex/: Languages.js
C++/Sentinel/Optitex/Components/: ClassicComboBox.qml  ClassicProgressBar.qml  ClassicRadioButton.qml  Descs.qml  InstallWindow.qml  LabelFor.qml  LocalizedContainer.qml  LocalizedObject.qml  LocalizedWindow.qml  MainWindow.qml  NavigationButtons.qml  PushButton.qml  ScrollTextArea.qml  TemplateWindow.qml  TextEntry.qml
C++/Sentinel/Optitex/Constants/: Label.qml  LeftBanner.qml  LogHandler.qml  Logger.qml  TopBanner.qml  Vars.js
C++/Sentinel/Optitex/Dialogs/: Cancel.qml  EnterPassword.qml  Message.qml  Ready2Install.qml  Ready2Restart.qml  RunSentinel.qml  SelectLang.qml  SuccessInstallation.qml
C++/Sentinel/Optitex/Scripts/: Optitex.h  OptitexSentinel.h
Python/ColorRecognition/: README.md  app_config.json  main.py  main.qml  qml.qrc
Python/EasyLang/: Compiler.py  Parser.py  Scanner.py
Python/Islands/: README.md  islands_data_1.txt  islands_data_2.txt  main.py
Web/Assignments/Apple/: index.html
Web/Assignments/GalleryA/: README.md  gallery.html  style.css
Web/Assignments/GalleryB/: app.js  configs.js  constants.js  imagelist.txt  package.json
Web/Assignments/Lab/: app.js  package.json
Web/Assignments/Master Mind/: game.html  script.js  style.css
Web/Assignments/Store/: store.html  style.css
Web/Assignments/st3/: index.html
(+66 files in other folders)
